--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "./node_modules/nodemon/bin/nodemon.js index.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"better-sqlite3": "^7.5.0",
 		"express": "^4.17.3"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.15"
 	}
 }
